# nenana-model

./: .gitignore  README.md  download_cds.py  download_era5.py  model.ipynb  pyproject.toml
data/: breakup_times.csv  mei.csv  thickness.csv
