[project]
name = "nenana-model"
version = "0.1.0"
description = "Gaming the Nenana Ice Classic"
authors = [
    {name = "Nick Crews", email = "nicholas.b.crews@gmail.com"},
]
dependencies = [
    "altair",
    "cdsapi",
    "ibis-framework[duckdb]",
    "ipykernel",
    # cdsapi depends on pkg_resources but doesn't declare it
    # https://github.com/ecmwf/cdsapi/pull/74
    "setuptools",
    "xarray>=2024.2.0",
    "cfgrib>=0.9.10.4",
    "dask>=2024.3.1",
    "matplotlib>=3.8.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
